--- a/priority.html
+++ b/priority.html
@@ -8,7 +8,6 @@
 <body>
 <div class="container">
 <script>
-
 function getCheckedBoxes(chkboxName) {	//function to collect all ticked checkboxes
   var checkboxes = document.getElementsByName(chkboxName);
   var displayChecked = "<br/><h1><b><center>Concerns</center></b></h1>";
@@ -34,7 +33,7 @@ function getCheckedBoxes(chkboxName) {	//function to collect all ticked checkbox
 	function retrieveGoals(patientTreatmentGoals){	//generate table based on user selection
 var tick = "&#9745";
 var untick = "&#9744";
-		var createTable = "<div id='goalsOutput'><br/><h1><b>Knowing what is important to you</b></h1><h4>When discussing options with your doctor, it is important to think about what is personally important to you. One helpful way is to think about your decision in terms of:<ul><li>Your <b>treatment goals</b> (something you want to achieve through your choice of treatment)</li><li>Your <b>treatment concerns</b> (worries or questions you may have)</li></ul></h4><h1><b><center>Treatment Goals</center></b></h1><table id='tab_customers' class='table table-striped'><colgroup><col width='20%'><col width='20%'></colgroup><thead><tr class='warning'><th>Treatment Goals</th><th>Importance</th></tr></thead><tbody>";
+		var createTable = "<div id='goalsOutput'><br/><div id='intro' class='alert alert-info'><h1><b>Knowing what is important to you</b></h1><h4>When discussing options with your doctor, it is important to think about what is personally important to you. One helpful way is to think about your decision in terms of:<ul><li>Your <b>treatment goals</b> (something you want to achieve through your choice of treatment)</li><li>Your <b>treatment concerns</b> (worries or questions you may have)</li></ul></h4></div><h1><b><center>Treatment Goals</center></b></h1><table id='tab_customers' class='table table-striped'><colgroup><col width='20%'><col width='20%'></colgroup><thead><tr class='warning'><th>Treatment Goals</th><th>Importance</th></tr></thead><tbody>";
 		for(i=0;i<6;i++){
 			var data = document.forms["patientTreatmentGoals"]["treatmentGoals["+i+"]"].value;
 			if(data == "1")
@@ -125,7 +124,9 @@ var untick = "&#9744";
 </ul>
 </h4>
 </div>
-<h1><center><b>Treatment Goals</b></center></h1>
+<div class="panel panel-default">
+  <div class="panel-heading"><h1><center><b>Treatment Goals</b></center></h1></div>
+  <div class="panel-body">
 <h4><b>How important are the following to you when making a decision about prostate cancer treatment? (Tick your priority level on each item on the scale below).</b></h4>
 <form id="patientTreatmentGoals" name ="patientTreatmentGoals">
 	<table class="table table-striped table-bordered custom-matrix">
@@ -178,8 +179,11 @@ var untick = "&#9744";
 	</table>
 	
 </form>
-
-<h1><center><b>Treatment Concerns</b></center></h1>
+</div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading"><h1><center><b>Treatment Concerns</b></center></h1></div>
+  <div class="panel-body">
 <h4><b>What are your concerns about prostate cancer treatment? (Tick your concerns) you can tick more than one box.</b></h4>
 <form id="patientConcerns" name="patientConcerns">
 
@@ -205,8 +209,9 @@ var untick = "&#9744";
 
 <div class="checkbox"><h4><label><input type="checkbox" name="concerns[]" value="I am distressed (e.g. shocked, confused, angry, panicked)">I am distressed (e.g. shocked, confused, angry, panicked)</label></h4><br/>
 </form>
-<button type="button" class="btn btn-success btn-lg" onclick="javascript:retrieveGoals(patientTreatmentGoals);">Submit</button>
+</div></div>
 </div>
+<button type="button" class="btn btn-success btn-lg" onclick="javascript:retrieveGoals(patientTreatmentGoals);">Submit</button>
 </body>
 </div>
 </html>
