--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
                       </div>
                       <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
-                        <button class="btn btn-default">Next Sldie >></button>
+                        <button class="btn btn-default">Next Slide >></button>
                       </div>
                     </div>
                   </div>
