--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 					<a class="page-scroll" href="#overview">Overview</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="#portfolio">Treatment Options</a>
+					<a class="page-scroll" href="p2/onlinePDA.html">Browse PDA</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="#download">Download</a>
-				</li>
+          <a class="page-scroll" href="p2/compareTreatment.html">Treatment Comparison</a>
+        </li>
+        <li>
+          <a class="page-scroll" href="p2/priority.html">Concerns</a>
+        </li>
 				<li>
 					<a class="page-scroll" href="#contact">Contact Us</a>
 				</li>
@@ -65,105 +68,48 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">How This Website Helps</h2>
+					<h2 class="section-heading">This Website Helps In 3 Simple Steps</h2>
 					<hr>
 				</div>
 			</div>
 		</div>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-3 col-md-6 text-center">
-					<div class="service-box">
-						<i class="fa fa-4x fa-question text-primary "></i>
-						<h3>Understand Your Disease</h3>
-						<p class="text-muted">Helps you understand medical facts about early stage prostate cancer</p>
+				<div class="col-lg-4 col-md-6 text-center">
+					<div class="service-box">						
+						<h3>Step 1</h3>
+            <hr/>
+            <i class="fa fa-4x fa-question text-primary "></i>
+            <h3>Understand Your Disease</h3>
+						<p class="text-muted">Browse Through our online patient decision aid and get to know more about prostate cancer for effective consultation.</p>
+            <br/>
+            <a target="_blank" href="p2/onlinePDA.html" class="btn btn-primary btn-xl page-scroll">Browse PDA</a>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 text-center">
-					<div class="service-box">
-						<i class="fa fa-4x fa-medkit text-primary "></i>
-						<h3>Know Your Choices</h3>
-						<p class="text-muted">Provides facts about the disease, treatment choices, benefits and risks of each treatment</p>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 text-center">
-					<div class="service-box">
-						<i class="fa fa-4x fa-puzzle-piece text-primary "></i>
+				<div class="col-lg-4 col-md-6 text-center">
+					<div class="service-box">						
+            <h3>Step 2</h3>
+            <hr/>
+            <i class="fa fa-4x fa-puzzle-piece text-primary "></i>
 						<h3>Effective Decision Making</h3>
-						<p class="text-muted">Guide to have better treatment decision after discussing with your doctor</p>
+						<p class="text-muted">Compare different fields on available treatment options to get deeper understanding on your decision.</p>
+            <br/>
+            <a target="_blank" href="p2/compareTreatment.html" class="btn btn-primary btn-xl page-scroll">Start comparing</a>
 					</div>
 				</div>
-				<div class="col-lg-3 col-md-6 text-center">
-					<div class="service-box">
-						<i class="fa fa-4x fa-heartbeat text-primary "></i>
-						<h3>Be Well Informed</h3>
-						<p class="text-muted">Even if you chooce to let the doctor decide, you will be well informed</p>
+				<div class="col-lg-4 col-md-6 text-center">
+					<div class="service-box">						
+            <h3>Step 3</h3>
+            <hr/>
+            <i class="fa fa-4x fa-heartbeat text-primary "></i>
+						<h3>Easier Two-way Consultation</h3>
+						<p class="text-muted">Listing down your personal concerns before your next consultation will allow your doctor to get to know you better.</p>
+            <br/>
+            <a target="_blank" href="p2/priority.html" class="btn btn-primary btn-xl page-scroll">Start questionnaire</a>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
-	<section class="no-padding" id="portfolio">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Treatment Options</h2>
-					<hr>
-				</div>
-			</div>
-		</div>
-        <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="observation.html" class="portfolio-box">
-                        <img src="img/observation.jpg" class="img-responsive" alt="">
-                        <figcaption>Observation</figcaption>
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Treatment Option
-                                </div>
-                                <div class="project-name">
-                                    Observation
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="surgery.html" class="portfolio-box">
-                        <img src="img/tools.png" class="img-responsive" alt="">
-                        <figcaption>Surgery</figcaption>
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Treatment Option
-                                </div>
-                                <div class="project-name">
-                                    Surgery
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="radiotherapy.html" class="portfolio-box">
-                        <img src="img/radiotherapy.jpg" class="img-responsive" alt="">
-                        <figcaption>Radiotherapy</figcaption>
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Treatment Option
-                                </div>
-                                <div class="project-name">
-                                    Radiotherapy
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
 	</section>
 	<aside class="bg-dark" id="download">
         <div class="container text-center">
