--- a/p2/onlinePDA.html
+++ b/p2/onlinePDA.html
@@ -485,6 +485,136 @@
             <div class="slide" id="slide22">
               <header>
                 <div class="header-content">
+                  <div class="header-content-inner">
+                    <h1>Treatment 1: Observation</h1>
+                  </div>
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left" style="margin-top: 20px">    
+                        <h3><b>Introduction</b></h3>
+                        <div class="info-card">                    
+                          <h3>What do I need to know about observation ?</h3>
+                          <dl>
+                            <dt><font>Suitable For</font></dt>
+                            <dd>Early-stage patient</dd>
+                            <dt>Cost</dt>
+                            <dd><ul><li>Depends on hospital.</li><li>Cost is mainly for consultation and testing.</li></ul></dd>
+                          </dl> 
+                        </div>
+                      </div>
+                      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-left" style="margin-top: 20px"> 
+                        <h3><b>Type of Observation</b></h3>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-left" style="margin-top: 20px">            
+                        <div class="info-card">
+                          <h3>Active Surveillance</h3>
+                          <dl>
+                            <dt>Procedure</dt><ul>
+                              <li>Involves regular follow up with examinations and tests.</li>
+                              <li>PSA and prostate examination will be done every few months and prostate biopsy every 1 to 3 years.</li>
+                              <li>Active treatment such as surgery or radiotheraphy still remain as options in case of disease progression.</li>
+                            </ul>
+                            <dt>Suitable for</dt>
+                            <dd>Patient who have small cancer confined to the prostate gland and it doesnt grow fast.</dd>
+                          </dl>
+                        </div>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-left" style="margin-top: 20px">            
+                        <div class="info-card">
+                          <h3>Watchful Waiting</h3>
+                          <dl>
+                            <dt>Procedure</dt>
+                            <dd><ul>
+                              <li>Involves less frequent follow up and examinations than active surveillance</li>
+                              <li>Only done if there is concern that the cancer is growing too fast or patient develop symptom.</li>
+                            </ul></dd>
+                            <dt>Suitable for</dt>
+                            <dd>Patient who is old and have a lot of serious health problem.</dd>
+                          </dl>
+                        </div>
+                      </div>
+                    </div>                      
+                  </div>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous Slide</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next Slide >></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </header>              
+            </div>
+            <div class="slide" id="slide23">
+              <header>
+                <div class="header-content">
+                  <div class="header-content-inner">
+                    <h1>Treatment 1: Observation</h1>
+                  </div>
+                  <div class="container-fluid">
+                    <div class="row">
+                      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-left" style="margin-top: 20px">    
+                        <h3><b>Advantages of Observation</b></h3>
+                        <div class="info-card">                    
+                          <dl>
+                            <dt>Can avoid complications of active treatment such as : </dt>
+                            <dd><ul>
+                              <li>Trouble controlling bladder or bowels</li>
+                              <li>Trouble having an erection</li>
+                            </ul></dd>
+                            <dt>Can change your treatment option</dt>
+                            <ul><li><dd>You can always change your treatment option to either surgery or radiotheraphy.</dd></li></ul>
+                            <dt>Cheaper cost</dt>
+                            <ul><li><dd>Cost is cheaper compared to active treatment (surgery and radiotheraphy).But <b>active surveillance is more costly than watchful waiting</b> as it require more frequent testing and follow up.</dd></li></ul>
+                          </dl>
+                        </div>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-left" style="margin-top: 20px">    
+                        <h3><b>Disadvantages of Observation</b></h3>        
+                        <div class="info-card">
+                          <dl>
+                            <dt>Feel worried or anxious</dt>
+                            <dd><ul><li>You may feel worried or anxious about living with cancer and putting off the treatment.</li></ul></dd>
+                            <dt>Follow up</dt>
+                            <dd><ul>
+                              <li>The cancer needs to be followed closely.</li>
+                            </ul></dd>
+                            <dt>Time consuming</dt>
+                            <dd><ul>
+                              <li>Patient need to go for blood tests and biopsies more frequently (in case of active surveillance)</li>
+                            </ul></dd>
+                            <dt>Cancer may spread</dt>
+                            <dd><ul>
+                              <li>The cancer may spread and become harder to treat. However, the chance is low if the prostate cancer risk of progression is low.</li>
+                            </ul></dd>
+                          </dl>
+                        </div>
+                      </div>
+                    </div>                      
+                  </div>
+                  <div class="container nav-btn">
+                    <div class="row">
+                      <div class="fp-controlArrow fp-prev col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                        <button class="btn btn-default"><< Previous Slide</button>
+                      </div>
+                      <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-left">
+                      </div>
+                      <div class="fp-controlArrow fp-next col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4 col-xs-4 offset-sm-4 text-right">
+                        <button class="btn btn-default">Next Slide >></button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </header>              
+            </div>
+            <div class="slide" id="slide22">
+              <header>
+                <div class="header-content">
                   <div class="treatment-header">
                     <div class="container-fluid ">
                       <div class="row">
