--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h3>Understand Your Disease</h3>
 						<p class="text-muted">Browse Through our online patient decision aid and get to know more about prostate cancer for effective consultation.</p>
             <br/>
-            <a target="_blank" href="p2/onlinePDA.html" class="btn btn-primary btn-xl page-scroll">Browse PDA</a>
+            <a target="_blank" href="p2/onlinePDA.html" class="btn btn-primary btn-xl page-scroll">Start Browsing</a>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center">
